--- a/freedomOfComputing/build.gradle
+++ b/freedomOfComputing/build.gradle
@@ -56,16 +56,16 @@ dependencies {
     implementation files('../common/libs/jlibtorrent-android-x86-' + jlibtorrent_version + '.jar')
     implementation files('../common/libs/jlibtorrent-android-x86_64-' + jlibtorrent_version + '.jar')
 
-    api 'androidx.appcompat:appcompat:1.1.0'
-    api 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.core:core-ktx:1.9.0'
+    api "androidx.appcompat:appcompat:$appcompat_version"
+    api "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    implementation "androidx.core:core-ktx:$core_version"
 
-    api 'com.google.android.material:material:1.1.0'
+    api "com.google.android.material:material:$material_version"
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
-    testImplementation 'junit:junit:4.12'
+    testImplementation "junit:junit:$junit_version"
     testImplementation "io.mockk:mockk:$mockk_version"
     testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation "androidx.test.ext:junit:$android_junit_version"
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -75,13 +75,13 @@ dependencies {
 
     // Transitive dependencies
     androidTestImplementation 'androidx.test:monitor:1.6.1'
-    androidTestImplementation 'junit:junit:4.13.2'
+    androidTestImplementation "junit:junit:$junit_version"
     api 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     api(project(':ipv8')) {
         exclude module: 'lazysodium-java'
     }
-    implementation 'androidx.core:core:1.9.0'
-    implementation 'androidx.fragment:fragment:1.5.4'
+    implementation "androidx.core:core:$core_version"
+    implementation "androidx.fragment:fragment:$fragment_version"
     implementation 'androidx.transition:transition:1.4.1'
     implementation project(':ipv8-android')
     testImplementation 'io.mockk:mockk-dsl:1.13.9'
