--- a/peerai/build.gradle
+++ b/peerai/build.gradle
@@ -42,16 +42,16 @@ android {
 dependencies {
     api project(':common')
 
-    api 'androidx.constraintlayout:constraintlayout:2.1.4'
+    api "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
     implementation 'com.google.code.gson:gson:2.8.8'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation "com.google.android.material:material:$material_version"
     implementation 'com.squareup.picasso:picasso:2.8'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$android_junit_version"
 
     // Transitive dependencies
     androidTestImplementation 'androidx.test:monitor:1.6.1'
-    androidTestImplementation 'junit:junit:4.13.2'
+    androidTestImplementation "junit:junit:$junit_version"
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
