--- a/.github/workflows/apk_pr.yml
+++ b/.github/workflows/apk_pr.yml
@@ -14,14 +14,16 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: refs/pull/${{github.event.pull_request.number}}/merge
+          fetch-depth: 0
 
       - uses: ./.github/actions/checkout_submodules
 
       - name: Setup Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
+          cache: 'gradle'
 
       - name: Build release APK
         run: |
