--- a/.github/actions/checkout_submodules/action.yml
+++ b/.github/actions/checkout_submodules/action.yml
@@ -8,4 +8,4 @@ runs:
         git config --global url."https://github.com/".insteadOf "git@github.com:"
         auth_header="$(git config --local --get http.https://github.com/.extraheader)"
         git submodule sync --recursive
-        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive
