--- a/.github/workflows/apk_pr.yml
+++ b/.github/workflows/apk_pr.yml
@@ -11,22 +11,25 @@ jobs:
       name: apk_build
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
+          fetch-depth: 0
           ref: refs/pull/${{github.event.pull_request.number}}/merge
 
       - uses: ./.github/actions/checkout_submodules
 
       - name: Setup Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
+          cache: 'gradle'
 
       - name: Build release APK
         run: |
           echo $KEYSTORE_FILE | base64 -d > app/build.keystore
           ./gradlew assembleRelease \
+            --no-daemon \
             -Pandroid.injected.signing.store.file=$(pwd)/app/build.keystore \
             -Pandroid.injected.signing.store.password=$KEYSTORE_PASSWORD \
             -Pandroid.injected.signing.key.alias=$KEY_ALIAS \
