--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ buildscript {
 
     dependencies {
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
-        classpath("com.google.dagger:hilt-android-gradle-plugin:$hilt_ver")
+        classpath("com.google.dagger:hilt-android-gradle-plugin:$dagger_version")
 
     }
 }
@@ -31,7 +31,13 @@ ktlint {
 
 // Generate a version code from git commit count
 static def generateVersionCode() {
-    return "git rev-list HEAD --count".execute().text.trim().toInteger()
+    // Unix
+    def result = "git rev-list HEAD --count".execute().text.trim()
+    // Windows
+    if (result.empty) result = "PowerShell -Command git rev-list HEAD --count".execute().text.trim()
+    if (result.empty) throw new RuntimeException("Could not generate versioncode: ${result.text}")
+    println("Generated the following version code: " + result.toInteger())
+    return result.toInteger()
 }
 
 
@@ -42,11 +48,10 @@ android {
         compileSdk 34
         targetSdkVersion 34
         versionCode generateVersionCode()
-        versionName "0.3.3"
+        versionName "0.3.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
     signingConfigs {
         release {
             keyAlias "trustchain"
@@ -116,43 +121,25 @@ dependencies {
     implementation project(':eurotoken')
     implementation project(':valuetransfer')
     implementation project(':peerai')
-    api(project(':common')) {
-        exclude group: 'net.java.dev.jna'
-    }
-    api(project(':common-ethereum')) {
-        exclude group: 'net.java.dev.jna'
-    }
-    api(project(':currencyii')) {
-        exclude group: 'net.java.dev.jna'
-    }
-    api(project(':musicdao')) {
-        exclude group: 'net.java.dev.jna'
-    }
-
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-runtime:1.0-M1-1.4.0-rc'
+    implementation project(':common')
+    implementation project(':currencyii')
+    implementation project(':musicdao')
 
     // AndroidX
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "androidx.core:core-ktx:$core_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
-    implementation "androidx.preference:preference-ktx:1.2.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    implementation "androidx.work:work-runtime-ktx:2.7.1"
 
     // Firebase
     implementation 'com.google.firebase:firebase-analytics:21.2.0'
     implementation 'com.google.firebase:firebase-crashlytics:18.3.1'
 
     // Material
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation "com.google.android.material:material:$material_version"
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -161,29 +148,46 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     // Logging
-    implementation 'io.github.microutils:kotlin-logging:1.7.7'
     implementation('net.java.dev.jna:jna:5.12.1@aar')
-    implementation('com.github.tony19:logback-android:2.0.0')
 
-    implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
+    implementation "com.github.MattSkala:recyclerview-itemadapter:$recyclerview_adapter_version"
     implementation project(':currencyii')
 
     // Testing
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$android_junit_version"
 
     // Hilt
-    implementation("com.google.dagger:hilt-android:$hilt_ver")
-    implementation("androidx.hilt:hilt-navigation-fragment:1.0.0")
-    implementation("androidx.hilt:hilt-navigation-compose:1.1.0-alpha01")
-    kapt("com.google.dagger:hilt-android-compiler:$hilt_ver")
+    implementation("com.google.dagger:hilt-android:$dagger_version")
+    kapt("com.google.dagger:hilt-android-compiler:$dagger_version")
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
-    implementation("androidx.room:room-ktx:$room_version")
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-    kapt("androidx.room:room-compiler:$room_version")
+
+    // Transitive dependencies
+    androidTestImplementation 'androidx.test:monitor:1.6.1'
+    implementation 'androidx.annotation:annotation:1.5.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+    implementation "androidx.core:core:$core_version"
+    implementation 'androidx.datastore:datastore-core:1.0.0'
+    implementation 'androidx.datastore:datastore-preferences-core:1.0.0'
+    implementation "androidx.fragment:fragment:$fragment_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation 'androidx.preference:preference:1.2.0'
+    implementation 'androidx.sqlite:sqlite:2.4.0'
+    implementation "app.cash.sqldelight:android-driver:$sqldelight_version"
+    implementation "app.cash.sqldelight:runtime:$sqldelight_version"
+    implementation 'com.google.dagger:dagger:2.50'
+    implementation "com.google.dagger:hilt-core:$dagger_version"
+    implementation 'com.google.errorprone:error_prone_annotations:2.9.0'
+    implementation 'com.google.guava:guava:31.0.1-android'
+    implementation 'javax.inject:javax.inject:1'
+    implementation(project(':ipv8')) {
+        exclude module: 'lazysodium-java'
+    }
+    implementation project(':ipv8-android')
+    kapt 'com.google.dagger:dagger-compiler:2.50'
 }
 
 
