--- a/common/build.gradle
+++ b/common/build.gradle
@@ -78,33 +78,23 @@ repositories {
 }
 
 dependencies {
-    api(project(':ipv8-android')) {
-        exclude group: 'net.java.dev.jna'
-        exclude group: 'org.bouncycastle'
-    }
+    implementation project(':ipv8-android')
 
-    api 'com.google.guava:guava:30.0-android'
+    implementation 'com.google.guava:guava:30.0-android'
 
     // AndroidX
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    api "androidx.appcompat:appcompat:$appcompat_version"
+    api "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation "androidx.fragment:fragment-ktx:${fragment_version}"
-    implementation "androidx.preference:preference:1.1.0"
-    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation 'androidx.databinding:viewbinding:8.2.2'
 
     // QR
-    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    api 'com.journeyapps:zxing-android-embedded:4.3.0'
 
     // Material
-    implementation 'com.google.android.material:material:1.1.0'
+    api "com.google.android.material:material:$material_version"
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -112,13 +102,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
-    // Logging
-    implementation 'io.github.microutils:kotlin-logging:1.7.7'
-
-    implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
-
-    implementation group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.10'
-
+    api group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.10'
     api project(':geth-android')
 
     // BitTorrent
@@ -129,15 +113,29 @@ dependencies {
     implementation files('libs/jlibtorrent-android-x86_64-' + jlibtorrent_version + '.jar')
 
     // Testing
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation "junit:junit:$junit_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
     testImplementation "io.mockk:mockk:$mockk_version"
-    testImplementation 'org.json:json:20190722'
     testImplementation "app.cash.sqldelight:sqlite-driver:$sqldelight_version"
     testImplementation "com.goterl:lazysodium-java:5.1.4"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // Transitive dependencies
+    api "androidx.fragment:fragment:$fragment_version"
+    api "androidx.navigation:navigation-ui:$nav_version"
+    api 'androidx.viewpager2:viewpager2:1.0.0'
+    api(project(':ipv8')) {
+        exclude module: 'lazysodium-java'
+    }
+    implementation "androidx.core:core:$core_version"
+    implementation 'androidx.customview:customview:1.1.0'
+    implementation "androidx.lifecycle:lifecycle-common:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-core:$lifecycle_version"
+    implementation "androidx.navigation:navigation-runtime:$nav_version"
+    implementation 'androidx.sqlite:sqlite:2.4.0'
+    implementation "app.cash.sqldelight:android-driver:$sqldelight_version"
+    implementation "app.cash.sqldelight:coroutines-extensions:$sqldelight_version"
+    implementation 'com.google.zxing:core:3.4.1'
+    testImplementation 'io.mockk:mockk-dsl:1.13.9'
 }
 
 
