--- a/eurotoken/build.gradle
+++ b/eurotoken/build.gradle
@@ -51,45 +51,46 @@ android {
 }
 
 dependencies {
+    api project(':common')
 
-    implementation project(':common')
-
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    // AndroidX
+    api "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    api "androidx.recyclerview:recyclerview:$recyclerview_version"
+    api "com.github.MattSkala:recyclerview-itemadapter:$recyclerview_adapter_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.room:room-runtime:$room_version"
-
-    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
-    implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
-
     // Material
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'com.getbase:floatingactionbutton:1.10.1'
+    api "com.google.android.material:material:$material_version"
 
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     // Logging
-    implementation 'io.github.microutils:kotlin-logging:1.7.7'
+    api 'io.github.microutils:kotlin-logging:1.7.7'
 
     // Testing
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$android_junit_version"
+
+    // Transitive dependencies
+    androidTestImplementation 'androidx.test:monitor:1.6.1'
+    api(project(':ipv8')) {
+        exclude module: 'lazysodium-java'
+    }
+    implementation "androidx.core:core:$core_version"
+    implementation "androidx.fragment:fragment:$fragment_version"
+    implementation "androidx.lifecycle:lifecycle-common:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-core:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-runtime:$nav_version"
+    implementation 'androidx.sqlite:sqlite:2.4.0'
+    implementation "app.cash.sqldelight:android-driver:$sqldelight_version"
 
 }
