--- a/valuetransfer/build.gradle
+++ b/valuetransfer/build.gradle
@@ -65,25 +65,21 @@ android {
 }
 
 dependencies {
-    implementation project(':common')
+    api project(':common')
+    api project(':eurotoken')
 
     // AndroidX
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
-    implementation "androidx.preference:preference:1.1.0"
+    api "androidx.appcompat:appcompat:$appcompat_version"
+    api "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    api "androidx.recyclerview:recyclerview:$recyclerview_version"
+    implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     // Material
-    implementation 'com.google.android.material:material:1.2.0'
-    implementation 'com.getbase:floatingactionbutton:1.10.1'
+    api "com.google.android.material:material:$material_version"
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -93,26 +89,20 @@ dependencies {
 
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
-    implementation 'com.github.tony19:logback-android:2.0.0'
 
-    implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
+    api "com.github.MattSkala:recyclerview-itemadapter:$recyclerview_adapter_version"
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.room:room-runtime:$room_version"
-    implementation project(path: ':eurotoken')
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
     implementation 'com.google.android.gms:play-services-location:21.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     // Testing
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$android_junit_version"
 
     // Blocking dialog and top snacbkbar
-    implementation 'com.jaredrummler:blocking-dialog:1.0.0'
+    api 'com.jaredrummler:blocking-dialog:1.0.0'
     implementation 'com.github.Redman1037:TSnackBar:V2.0.0'
 
     // Passport onboarding
@@ -127,12 +117,37 @@ dependencies {
     implementation 'com.madgag.spongycastle:prov:1.58.0.0'
 
     // Zoom image
-    implementation 'com.jsibbold:zoomage:1.3.1'
+    api 'com.jsibbold:zoomage:1.3.1'
 
     // Side to confirm
-    implementation "com.ncorti:slidetoact:0.9.0"
+    api "com.ncorti:slidetoact:0.9.0"
 
     implementation "com.android.volley:volley:1.2.1"
+
+    // Transitive dependencies
+    androidTestImplementation 'androidx.test:monitor:1.6.1'
+    api 'androidx.cardview:cardview:1.0.0'
+    api "androidx.core:core:$core_version"
+    api "androidx.fragment:fragment:$fragment_version"
+    api "androidx.lifecycle:lifecycle-livedata-core:$lifecycle_version"
+    api 'androidx.viewpager:viewpager:1.0.0'
+    api 'com.google.mlkit:common:16.0.0'
+    api(project(':ipv8')) {
+        exclude module: 'lazysodium-java'
+    }
+    implementation 'androidx.documentfile:documentfile:1.0.0'
+    implementation "androidx.lifecycle:lifecycle-common:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-process:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation 'androidx.sqlite:sqlite:2.4.0'
+    implementation "app.cash.sqldelight:android-driver:$sqldelight_version"
+    implementation "app.cash.sqldelight:coroutines-extensions:$sqldelight_version"
+    implementation 'com.google.mlkit:vision-common:16.0.0'
+    implementation 'net.sf.scuba:scuba-smartcards:0.0.18'
+    implementation project(':ipv8-android')
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
