used debug window from the other group https://github.com/Tribler/trustchain-superapp/compare/master...KolevVelyan:trustchain-superapp:master

--- a/debug/build.gradle
+++ b/debug/build.gradle
@@ -42,6 +42,13 @@ android {
     namespace 'nl.tudelft.trustchain.debug'
 }
 
+repositories {
+    maven {
+        url "https://jitpack.io"
+    }
+    // Define your other dependency repositories, if any
+}
+
 dependencies {
     api project(':common')
 
@@ -68,6 +75,8 @@ dependencies {
     implementation(project(':ipv8')) {
         exclude module: 'lazysodium-java'
     }
+    implementation 'com.github.iiljkic:utp4j:4119f7d268e927cd32bfc44e53f84bb38e7a1264'
+
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
