Update the debug screen

--- a/debug/build.gradle
+++ b/debug/build.gradle
@@ -73,7 +73,8 @@ dependencies {
         exclude module: 'lazysodium-java'
     }
 
-    // uTP protocol
+    // uTP protocol stuff
+    implementation 'com.google.guava:guava:30.0-android' // For hashing, should probably be deleted later
     api 'com.github.PieterCarton:utp4j:master-SNAPSHOT'
 }
 
