43 research how to add apps to the main screen (#57)
* Add initial working code for adding apps to the home screen.

* Add button to install apps to home screen

* Add code to more idiomatic install foc apps, and allows for removing apps from the home screen.

* Fix warnings

* Add functionality for installing apps when a threshold is reached

* Add appdefinition tests

* Remove redundant code

* Add tests for appLoader

* Fix style issues

* Add tests for InstalledApps

* Add kdoc

* Fix ktlint style issue

* re add code that got removed by merging.

* remove TODOs

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -111,6 +111,8 @@ dependencies {
     implementation files('libs/jlibtorrent-android-arm-' + jlibtorrent_version + '.jar')
     implementation files('libs/jlibtorrent-android-x86-' + jlibtorrent_version + '.jar')
     implementation files('libs/jlibtorrent-android-x86_64-' + jlibtorrent_version + '.jar')
+    implementation 'androidx.datastore:datastore-core:1.0.0'
+    implementation 'androidx.datastore:datastore-preferences-core:1.0.0'
 
     // Testing
     testImplementation "junit:junit:$junit_version"
