--- a/app/build.gradle
+++ b/app/build.gradle
@@ -152,6 +152,8 @@ dependencies {
 
     implementation "com.github.MattSkala:recyclerview-itemadapter:$recyclerview_adapter_version"
     implementation project(':currencyii')
+    androidTestImplementation 'androidx.test:core-ktx:1.5.0'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
 
     // Testing
     testImplementation "junit:junit:$junit_version"
