--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,6 +154,7 @@ dependencies {
     implementation project(':currencyii')
     androidTestImplementation 'androidx.test:core-ktx:1.5.0'
     androidTestImplementation 'androidx.test:runner:1.5.2'
+    implementation "com.github.MattSkala:recyclerview-itemadapter:$recyclerview_adapter_version"
 
     // Testing
     testImplementation "junit:junit:$junit_version"
