--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "kotlin-ipv8"]
 	path = kotlin-ipv8
-	url = https://github.com/Tribler/kotlin-ipv8.git
+	url = https://github.com/Eragoneq/kotlin-ipv8.git
