--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,9 +151,11 @@ dependencies {
     implementation('net.java.dev.jna:jna:5.12.1@aar')
 
     implementation "com.github.MattSkala:recyclerview-itemadapter:$recyclerview_adapter_version"
+    implementation project(':currencyii')
 
     // Testing
     testImplementation "junit:junit:$junit_version"
+    testImplementation 'io.mockk:mockk:1.11.0'
     androidTestImplementation "androidx.test.ext:junit:$android_junit_version"
 
     // Hilt
