--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "kotlin-ipv8"]
 	path = kotlin-ipv8
 	url = https://github.com/Tribler/kotlin-ipv8.git
+[submodule "CSE4110_jre"]
+	path = CSE4110_jre
+	url = git@github.com:Kheoss/CSE4110_jre.git
