--- a/common-ethereum/build.gradle
+++ b/common-ethereum/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     }
 
     api project(':geth-android')
+    implementation project(':common')
+    implementation 'com.google.firebase:firebase-encoders-json:16.1.0'
 
     testImplementation "junit:junit:$junit_version"
 
