--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'app.cash.sqldelight'
 apply plugin: 'org.jlleitschuh.gradle.ktlint'
-
+apply plugin: 'androidx.navigation.safeargs.kotlin'
 ktlint {
     version = "$ktlint_version"
     android = true
