--- a/p2playstore/build.gradle
+++ b/p2playstore/build.gradle
@@ -7,6 +7,9 @@ android {
     namespace 'nl.tudelft.trustchain.p2playstore'
     compileSdk 34
 
+    buildFeatures {
+        viewBinding true
+    }
     defaultConfig {
         minSdk 26
 
@@ -31,6 +34,10 @@ android {
 
 dependencies {
     implementation project(':common')
+    implementation project(':currencyii')
+
+    //implementation project(':freedomofcomputing')
+
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
@@ -39,4 +46,63 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+
+    implementation project(':ipv8-android')
+    api project(':common')
+
+    // AndroidX
+    api "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "androidx.core:core-ktx:$core_version"
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+
+    // Material
+    api "com.google.android.material:material:$material_version"
+
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    // Testing
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
+    testImplementation "io.mockk:mockk:$mockk_version"
+    androidTestImplementation "androidx.test.ext:junit:$android_junit_version"
+
+    // BitcoinJ
+    api 'org.bitcoinj:bitcoinj-core:0.15.10'
+
+    // GSON
+    api 'com.google.code.gson:gson:2.8.6'
+
+    // Transitive dependencies
+    androidTestImplementation 'androidx.test:monitor:1.6.1'
+    androidTestImplementation "junit:junit:$junit_version"
+    api "androidx.fragment:fragment:$fragment_version"
+    api "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    api "androidx.navigation:navigation-common:$nav_version"
+    api 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    api 'com.google.code.findbugs:jsr305:3.0.2'
+    api 'org.bouncycastle:bcprov-jdk15to18:1.68'
+    api(project(':ipv8')) {
+        exclude module: 'lazysodium-java'
+    }
+
+
+    implementation "androidx.core:core:$core_version"
+    implementation 'androidx.customview:customview:1.1.0'
+    implementation "androidx.lifecycle:lifecycle-common:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-core:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-runtime:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'com.google.guava:guava:30.0-android'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
+
+
 }
