Copied over community code from currency II

--- a/p2playstore/build.gradle
+++ b/p2playstore/build.gradle
@@ -34,7 +34,7 @@ android {
 
 dependencies {
     implementation project(':common')
-    //implementation project(':currencyii')
+    implementation project(':currencyii')
 
     //implementation project(':freedomofcomputing')
 
